--- a/Donaciones.WPF/App.xaml
+++ b/Donaciones.WPF/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application x:Class="Donaciones.WPF.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Donaciones.WPF"
-             StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="Donaciones.WPF.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Donaciones.WPF"
+    Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary Source="Recursos\Diccionario.xaml" />
     </Application.Resources>
