--- a/Donaciones.WPF/Recursos/Diccionario.xaml
+++ b/Donaciones.WPF/Recursos/Diccionario.xaml
@@ -1,35 +1,43 @@
 ﻿<!--<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Donaciones.WPF" x:Name="Diccionario">-->
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
-        
-    <Style x:Key="lblFieldName" TargetType="{x:Type Label}" BasedOn="{x:Null}">
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="3"/>
-        <Setter Property="Height" Value="23"/>
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <Style
+        x:Key="lblFieldName"
+        BasedOn="{x:Null}"
+        TargetType="{x:Type Label}">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="3" />
+        <Setter Property="Height" Value="24" />
         <Setter Property="FontWeight" Value="Bold" />
     </Style>
-    <Style x:Key="txtFieldStyle" TargetType="{x:Type TextBox}" BasedOn="{x:Null}">
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="3"/>
-        <Setter Property="Height" Value="23"/>
-        <Setter Property="Width" Value="120"/>
+    <Style
+        x:Key="txtFieldStyle"
+        BasedOn="{x:Null}"
+        TargetType="{x:Type TextBox}">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="3" />
+        <Setter Property="Height" Value="24" />
+        <Setter Property="Width" Value="120" />
     </Style>
-    <RoutedUICommand x:Key="FirstCommand" Text="Primero"/>
-    <RoutedUICommand x:Key="NextCommand" Text="Siguiente"/>
-    <RoutedUICommand x:Key="PreviousCommand" Text="Anterior"/>
-    <RoutedUICommand x:Key="DeleteCommand" Text="Borrar"/>
-    <RoutedUICommand x:Key="UpdateCommand" Text="Actualizar"/>
-    <RoutedUICommand x:Key="AddCommand" Text="Agregar"/>
-    <RoutedUICommand x:Key="CancelCommand" Text="Cancelar"/>
-    <Style x:Key="NavButton" TargetType="{x:Type Button}" BasedOn="{x:Null}">
-        <Setter Property="FontSize" Value="24"/>
-        <Setter Property="FontFamily" Value="Segoe UI Symbol"/>
-        <Setter Property="Margin" Value="2,2,2,0"/>
-        <Setter Property="Width" Value="40"/>
-        <Setter Property="Height" Value="auto"/>
+    <RoutedUICommand x:Key="FirstCommand" Text="Primero" />
+    <RoutedUICommand x:Key="NextCommand" Text="Siguiente" />
+    <RoutedUICommand x:Key="PreviousCommand" Text="Anterior" />
+    <RoutedUICommand x:Key="DeleteCommand" Text="Borrar" />
+    <RoutedUICommand x:Key="UpdateCommand" Text="Actualizar" />
+    <RoutedUICommand x:Key="AddCommand" Text="Agregar" />
+    <RoutedUICommand x:Key="CancelCommand" Text="Cancelar" />
+    <Style
+        x:Key="NavButton"
+        BasedOn="{x:Null}"
+        TargetType="{x:Type Button}">
+        <Setter Property="FontSize" Value="24" />
+        <Setter Property="FontFamily" Value="Segoe UI Symbol" />
+        <Setter Property="Margin" Value="2,2,2,0" />
+        <Setter Property="Width" Value="40" />
+        <Setter Property="Height" Value="auto" />
     </Style>
 </ResourceDictionary>
