--- a/Donaciones.WPF/Views/OrdenesView.xaml
+++ b/Donaciones.WPF/Views/OrdenesView.xaml
@@ -81,79 +81,121 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Label
-                x:Name="lblOrderID"
-                Grid.Row="0"
-                Grid.Column="0"
-                Content="Nro Orden:"
-                Style="{StaticResource lblFieldName}" />
-            <TextBox
-                x:Name="txtOrderID"
-                Grid.Row="0"
-                Grid.Column="1"
-                Grid.ColumnSpan="3"
-                Width="120"
-                IsEnabled="False"
-                Style="{StaticResource txtFieldStyle}"
-                Text="{Binding OrderID}" />
-            <Label
-                x:Name="lblOrderDate"
-                Grid.Row="0"
-                Grid.Column="2"
-                Content="Fecha de Orden:"
-                Style="{StaticResource lblFieldName}" />
-            <DatePicker
-                x:Name="dtpOrderDate"
-                Grid.Row="0"
-                Grid.Column="3"
-                Width="180"
-                Text="{Binding OrderDate}" />
-            <Label
-                x:Name="lblContacto"
-                Grid.Row="1"
-                Grid.Column="0"
-                Content="Beneficiario:"
-                Style="{StaticResource lblFieldName}" />
-            <TextBox
-                x:Name="txtContacto"
-                Grid.Row="1"
-                Grid.Column="1"
-                Grid.ColumnSpan="3"
-                Width="400"
-                Style="{StaticResource txtFieldStyle}"
-                Text="{Binding Contacto}" />
+            <Grid x:Name="DatosMaster" Grid.Row="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Label
+                    x:Name="lblOrderID"
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Content="Nro Orden:"
+                    Style="{StaticResource lblFieldName}" />
+                <TextBox
+                    x:Name="txtOrderID"
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Grid.ColumnSpan="3"
+                    Width="80"
+                    IsEnabled="False"
+                    Style="{StaticResource txtFieldStyle}"
+                    Text="{Binding OrderID}" />
+                <Label
+                    x:Name="lblOrderDate"
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    Content="Fecha de Orden:"
+                    Style="{StaticResource lblFieldName}" />
+                <DatePicker
+                    x:Name="dtpOrderDate"
+                    Grid.Row="0"
+                    Grid.Column="3"
+                    Width="180"
+                    Text="{Binding OrderDate}" />
+                <Label
+                    x:Name="lblContacto"
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Content="Beneficiario:"
+                    Style="{StaticResource lblFieldName}" />
+                <TextBox
+                    x:Name="txtContacto"
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Width="500"
+                    Style="{StaticResource txtFieldStyle}"
+                    Text="{Binding Contacto}" />
+            </Grid>
 
             <DataGrid
                 x:Name="dgrOrdenDetails"
-                Grid.Row="2"
-                Grid.Column="0"
-                Grid.ColumnSpan="4"
+                Grid.Row="1"
                 Width="560"
                 Margin="3,3,3,5"
                 VerticalAlignment="Top"
-                ItemsSource="{Binding OrdenesDetalles}" />
+                ItemsSource="{Binding OrdenesDetalles}"
+                Visibility="Hidden" />
             <Grid
                 x:Name="grdOrdenesDetalles"
-                Grid.Row="2"
-                Grid.Column="0"
-                Grid.ColumnSpan="4"
+                Grid.Row="1"
                 Visibility="{Binding Path=VisibilyGrid, Converter={StaticResource booleanToVisibilityConverter}}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <Button
-                    x:Name="btnLista"
-                    Click="BtnLista_Click"
-                    Content="Ver Lista" />
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Label
+                    x:Name="lblProductID"
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Content="Producto ID"
+                    Style="{StaticResource lblFieldName}" />
+                <TextBox
+                    x:Name="txtProductID"
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Width="80"
+                    Style="{StaticResource txtFieldStyle}"
+                    Text="{Binding ProductoID}" />
+                <Label
+                    x:Name="lblNombreProducto"
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    Content="Nombre Producto"
+                    IsEnabled="False"
+                    Style="{StaticResource lblFieldName}" />
+                <StackPanel
+                    x:Name="stpConexionProducto"
+                    Grid.Row="0"
+                    Grid.Column="3"
+                    Orientation="Horizontal">
+                    <TextBox
+                        x:Name="txtNombreProducto"
+                        Width="300"
+                        IsEnabled="True"
+                        Style="{StaticResource txtFieldStyle}"
+                        Text="{Binding NombreProducto}" />
+                    <Button
+                        x:Name="btnLista"
+                        Width="25"
+                        Command="{Binding VerListaProductosCommand}"
+                        Content="..." />
+                </StackPanel>
             </Grid>
         </Grid>
     </Grid>
